<resources>
    <string name="app_name">UTEP News</string>
    <string name="register">REGISTER</string>
    <string name="login">LOGIN</string>
    <string name="about">ABOUT</string>
    <string name="contact">CONTACT</string>
    <string name="sep">|</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="password_again_hint">Password again</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_internet_heading">No Internet Connection!</string>
    <string name="retry">Retry</string>
    <string name="remember_me">Remember me</string>
    <string name="remember_me_file_name">edu.utep.cs.cs4330.remember_me</string>
    <string name="log_out">Log out</string>
    <string-array name="sorting_array">
        <item>Date: New to Old</item>
        <item>Date: Old to New</item>
    </string-array>
    <string name="sort_by">Sort by:</string>
    <string name="about_app">About</string>
    <string name="contact_app">Contact</string>
</resources>
